# Diplom

./: .gitignore
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Spider/: CMakeLists.txt  Database.cpp  Database.h  IniParser.cpp  IniParser.h  Spider.cpp  Spider.h  data.ini  main.cpp
