cmake_minimum_required(VERSION 3.20)
project(Spider)
add_executable (Spider main.cpp Database.cpp Database.h IniParser.cpp IniParser.h Spider.cpp Spider.h)
add_subdirectory(C:/Users/kisa7/libpqxx-7.9.1 libpqxx-build)
target_compile_features(Spider PRIVATE cxx_std_17)
target_link_libraries(Spider pqxx)
target_link_libraries(Spider OpenSSL::SSL)
set (LIBXML2_ROOT "C:/Programming/Diplom/Spider/vcpkg/packages/libxml2_x64-windows/include/libxml2")
find_package(OpenSSL REQUIRED)
find_package(Boost 1.85.0 REQUIRED)
target_include_directories(Spider PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries(Spider ${Boost_LIBRARIES})
find_package(LibXml2 REQUIRED)
target_link_libraries(Spider LibXml2::LibXml2)
